addresses issue with overscroll on iOS

--- a/app/screens/Files/styles.scss
+++ b/app/screens/Files/styles.scss
@@ -132,7 +132,7 @@
     height: 100%;
     list-style: none;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-bottom: calc(env(safe-area-inset-bottom) + 75px);
     position: absolute;
     width: 100%;
